--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@craco/craco": "^6.0.0",
-        "@tailwindcss/postcss7-compat": "^2.0.2",
         "@testing-library/jest-dom": "^5.11.6",
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.6.0",
@@ -16,15 +14,16 @@
         "postcss": "^7.0.35",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-poppop": "^1.5.0",
         "react-scripts": "4.0.1",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+        "styled-components": "^5.2.1",
         "typescript": "^4.1.3",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
-        "start": "craco start",
-        "build": "craco build",
-        "test": "craco test",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -44,5 +43,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/styled-components": "^5.1.7"
     }
 }
