--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         ]
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.168",
+        "@types/react-select": "^4.0.12",
         "@types/styled-components": "^5.1.7"
     }
 }
