--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "autoprefixer": "^9.8.6",
         "postcss": "^7.0.35",
         "react": "^17.0.1",
+        "react-datepicker": "^3.4.1",
         "react-dom": "^17.0.1",
         "react-poppop": "^1.5.0",
         "react-scripts": "4.0.1",
@@ -47,6 +48,7 @@
     },
     "devDependencies": {
         "@types/lodash": "^4.14.168",
+        "@types/react-datepicker": "^3.1.3",
         "@types/react-select": "^4.0.12",
         "@types/styled-components": "^5.1.7"
     }
