--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
         "@types/react-dom": "^16.9.10",
         "autoprefixer": "^9.8.6",
         "formik": "^2.2.6",
+        "lodash": "^4.17.21",
         "postcss": "^7.0.35",
         "react": "^17.0.1",
         "react-datepicker": "^3.4.1",
         "react-dom": "^17.0.1",
         "react-poppop": "^1.5.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "styled-components": "^5.2.1",
         "typescript": "^4.1.3",
@@ -51,6 +53,7 @@
     "devDependencies": {
         "@types/lodash": "^4.14.168",
         "@types/react-datepicker": "^3.1.3",
+        "@types/react-router-dom": "^5.1.7",
         "@types/react-select": "^4.0.12",
         "@types/styled-components": "^5.1.7"
     }
