styling the app, Layout , Sidebar functionality, styled components

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-poppop": "^1.5.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
+        "react-select": "^4.2.1",
         "styled-components": "^5.2.1",
         "typescript": "^4.1.3",
         "web-vitals": "^0.2.4",
@@ -53,8 +54,6 @@
     "devDependencies": {
         "@types/lodash": "^4.14.168",
         "@types/react-datepicker": "^3.1.3",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/react-select": "^4.0.12",
         "@types/styled-components": "^5.1.7"
     }
 }
