--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react": "^16.14.2",
         "@types/react-dom": "^16.9.10",
         "autoprefixer": "^9.8.6",
+        "evergreen-ui": "^5.1.2",
         "formik": "^2.2.6",
         "lodash": "^4.17.21",
         "postcss": "^7.0.35",
@@ -22,6 +23,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "react-select": "^4.2.1",
+        "react-switch": "^6.0.0",
         "styled-components": "^5.2.1",
         "typescript": "^4.1.3",
         "web-vitals": "^0.2.4",
