--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^17.0.1",
         "react-datepicker": "^3.4.1",
         "react-dom": "^17.0.1",
+        "react-dropdown": "^1.9.2",
         "react-poppop": "^1.5.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
