--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^12.19.11",
         "@types/react": "^16.14.2",
         "@types/react-dom": "^16.9.10",
+        "@types/react-transition-group": "^4.4.1",
         "autoprefixer": "^9.8.6",
         "evergreen-ui": "^5.1.2",
         "formik": "^2.2.6",
@@ -23,6 +24,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "react-select": "^4.2.1",
+        "react-slidedown": "^2.4.5",
         "react-switch": "^6.0.0",
         "styled-components": "^5.2.1",
         "typescript": "^4.1.3",
